--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "6.0.0",
     "core-js": "^2.5.6",
     "font-awesome": "4.7.0",
+    "node-sass": "^4.9.0",
     "rxjs": "^6.1.0",
     "zone.js": "^0.8.26"
   },
